# proyecto-2-backend

./: .env.staging.example  .gitignore  CLAUDE.md  CLIENT_MANAGEMENT_IMPLEMENTATION_PLAN.md  ENTITY_VALIDATIONS_REPORT.md  MERGE_PLAN_REPORTS_TO_DEVELOP.md  MediSupply_BFF_Complete.postman_collection.json  MediSupply_Local.postman_environment.json  README.md  SESSION_MEMORY.md  SONARCLOUD_SETUP.md  docker-compose.ci.yml  docker-compose.local.yml  docker-compose.staging.yml  docker-compose.yml  postman_collection.json  products_batch.csv  products_with_batch_ids.csv  sonar-project.properties
bff/: .env.example  Dockerfile  Dockerfile.test  README.md  app.py  dependencies.py  docker-compose.yml  main.py  pyproject.toml  test_products_batch.csv
bff/client_app/: __init__.py  router.py
bff/client_app/adapters/: __init__.py  client_adapter.py  delivery_adapter.py  order_adapter.py
bff/client_app/controllers/: __init__.py  orders_controller.py
bff/client_app/ports/: __init__.py  client_port.py  delivery_port.py  order_port.py
bff/client_app/schemas/: __init__.py  order_schemas.py  shipment_schemas.py
bff/common/: __init__.py  error_schemas.py  exceptions.py  health_service.py  http_client.py  middleware.py  router.py  schemas.py
bff/common/adapters/: __init__.py  inventory_adapter.py
bff/common/auth/: __init__.py  adapters.py  auth_service.py  cognito_service.py  controller.py  dependencies.py  jwt_validator.py  ports.py  schemas.py
bff/common/controllers/: __init__.py  inventories_controller.py
bff/common/ports/: __init__.py  inventory_port.py
bff/common/realtime/: __init__.py  controller.py  publisher.py  schemas.py  token_service.py
bff/common/sqs/: __init__.py  consumer.py  handlers.py
bff/config/: settings.py
bff/sellers_app/: __init__.py  router.py
bff/sellers_app/adapters/: __init__.py  client_adapter.py  order_adapter.py  seller_adapter.py  visit_adapter.py
bff/sellers_app/controllers/: __init__.py  clients_controller.py  orders_controller.py  visits_controller.py
bff/sellers_app/ports/: __init__.py  client_port.py  order_port.py  seller_port.py  visit_port.py
bff/sellers_app/sagas/: __init__.py  create_visit_saga.py
bff/sellers_app/schemas/: __init__.py  client_schemas.py  order_schemas.py  visit_schemas.py
bff/tests/: conftest.py  test_main.py
bff/tests/common/: test_exceptions.py  test_health_service.py  test_middleware.py  test_middleware_edge_cases.py
bff/web/: __init__.py  router.py
bff/web/adapters/: __init__.py  catalog_adapter.py  delivery_adapter.py  http_client.py  inventory_adapter.py  order_adapter.py  reports_adapter.py  seller_adapter.py
bff/web/controllers/: __init__.py  catalog_controller.py  delivery_controller.py  inventories_controller.py  orders_controller.py  products_controller.py  providers_controller.py  reports_controller.py  sales_plans_controller.py  sellers_controller.py  warehouses_controller.py
bff/web/ports/: __init__.py  catalog_port.py  delivery_port.py  inventory_port.py  order_port.py  reports_port.py  seller_port.py
bff/web/schemas/: __init__.py  catalog_schemas.py  delivery_schemas.py  enums.py  inventory_schemas.py  order_schemas.py  report_schemas.py  seller_schemas.py
bff/web/services/: __init__.py  catalog_service.py  csv_parser.py  inventory_service.py  order_service.py  seller_service.py
catalog/: .dockerignore  .env.example  .flake8  Dockerfile  Dockerfile.test  README.md  alembic.ini  app.py  docker-compose.test.yml  docker-compose.with-db.yml  docker-compose.yml  main.py  pyproject.toml
catalog/alembic/: env.py
catalog/alembic/versions/: 23dd0fb2dbe3_2025_10_17_add_sku_to_products.py  764ec00c6ce9_2025_10_02_add_provider_and_product_.py  bb3e2f8e0d0b_2025_11_15_auto_migration.py  c3530bda1a0f_2025_10_17_auto_migration.py  f6e857c603d4_2025_10_17_remove_status_description_.py
catalog/src/domain/: exceptions.py
catalog/src/infrastructure/: dependencies.py
catalog/tests/: conftest.py  test_main.py  test_provider_controller.py  test_provider_repository.py
client/: .dockerignore  .env.example  Dockerfile  README.md  app.py  docker-compose.test.yml  docker-compose.with-db.yml  docker-compose.yml  main.py  pyproject.toml
client/alembic/: env.py
client/alembic/versions/: 2025_10_24_add_client_model.py  4fd349b9ee9f_2025_11_15_auto_migration.py
client/src/: dependencies.py
client/src/domain/: exceptions.py
client/tests/: conftest.py  test_main.py
delivery/: .env.example  Dockerfile  README.md  alembic.ini  app.py  docker-compose.test.yml  docker-compose.with-db.yml  docker-compose.yml  pyproject.toml
delivery/alembic/: env.py
delivery/alembic/versions/: 2025_11_18_initial_delivery_tables.py
delivery/src/domain/: exceptions.py  value_objects.py
delivery/src/infrastructure/: dependencies.py
delivery/tests/: conftest.py  test_main.py
delivery/tests/domain/: test_processed_event.py  test_route.py  test_shipment.py  test_value_objects.py  test_vehicle.py
inventory/: .env.example  Dockerfile  Dockerfile.test  README.md  alembic.ini  app.py  docker-compose.test.yml  docker-compose.with-db.yml  docker-compose.yml  pyproject.toml
inventory/alembic/: env.py
inventory/alembic/versions/: 04c5aec22c99_2025_10_24_add_reports_table.py  115738595904_2025_10_18_add_denormalized_fields_to_.py  273a582c1dc0_2025_10_07_add_store_model.py  616db0968775_initial_migration_with_warehouse_country.py  6b6951d1f673_2025_10_07_add_inventory_model.py  a048e1bc14de_2025_10_18_initial_migration.py  d8f5c9a1e234_2025_10_13_rename_stores_to_warehouses.py  (+2 more)
inventory/tests/: conftest.py  test_domain_exceptions.py  test_exception_handlers.py  test_main.py  test_schemas.py
order/: .env.example  Dockerfile  README.md  alembic.ini  app.py  docker-compose.test.yml  docker-compose.with-db.yml  docker-compose.yml  main.py  pyproject.toml
order/alembic/: env.py
order/tests/: conftest.py  test_create_order_use_case.py  test_domain_exceptions.py  test_list_orders_use_case.py  test_main.py  test_order_controller.py  test_order_repository.py  test_schemas.py
(+561 files in other folders)
