[project]
name = "bff"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
asyncpg = ">=0.30.0,<1.0.0"
fastapi = {extras = ["all"], version = ">=0.118.0,<0.119.0"}
httpx = ">=0.28.1,<0.29.0"
pycountry = ">=24.6.1,<25.0.0"
pydantic = ">=2.11.9,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
typer = ">=0.19.2,<0.20.0"
ably = "^2.1.1"
aioboto3 = "^15.4.0"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
greenlet = "^3.1.1"
isort = "^6.1.0"
pytest = "^8.4.2"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"

[tool.black]
line-length = 88
target-version = ['py313']
exclude = ".venv|alembic"

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "alembic"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*", "*/__init__.py", "*/infrastructure/config/*", "config/*", "*/config/*", "tests/*", ".venv/*", "__pycache__/*"]
relative_files = true
concurrency = ["thread", "greenlet"]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
