[tool.poetry]
name = "catalog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.13"
aiosqlite = ">=0.20.0,<1.0.0"
alembic = ">=1.16.5,<2.0.0"
asyncpg = ">=0.30.0,<1.0.0"
fastapi = {extras = ["all"], version = ">=0.118.0,<0.119.0"}
httpx = ">=0.28.1,<0.29.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pycountry = ">=24.6.1,<25.0.0"
pydantic = ">=2.11.9,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.43,<3.0.0"}
typer = ">=0.19.2,<0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
isort = "^6.1.0"
pytest = "^8.4.2"
pytest-asyncio = "^0.25.0"

[tool.black]
line-length = 88
target-version = ['py313']
exclude = ".venv|alembic"

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "alembic"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
