[project]
name = "delivery"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
aiosqlite = ">=0.20.0,<1.0.0"
alembic = ">=1.16.5,<2.0.0"
asyncpg = ">=0.30.0,<1.0.0"
fastapi = {extras = ["all"], version = ">=0.118.0,<0.119.0"}
httpx = ">=0.28.1,<0.29.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.43,<3.0.0"}
typer = ">=0.19.2,<0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*", "*/__init__.py", "*/infrastructure/config/*"]
relative_files = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
